# OpenCV_Tinkering

./: BallTracking.cpp  BlemishRemoval.cpp  BlemishRemovalSC.cpp  CMakeLists.txt  Cartoonification.cpp  ChromaKeying.cpp  DocumentScanner.cpp  FaceBlending.cpp  HDRImaging.cpp  HoughCircles.cpp  HoughTransform.cpp  ImageInpainting.cpp  InstagramFilters.cpp  README.md  SeamlessCloning.cpp  SmileDetection.cpp  cvtColorImplementation.cpp  faceAnnotation.cpp  trackbarResize.cpp
